--- a/div_html/WebContent/day2/shopindex.html
+++ b/div_html/WebContent/day2/shopindex.html
@@ -3,44 +3,84 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<style type="text/css">
 
-	li {list-style: none;}   /* 문단기호 사라짐 */
-	a {text-decoration: none;} /* 밑줄사라짐 */
-	#main_header {
-		background: #1D4088;	
-		color: white;
-		border-bottom: 5px solid black;
+<!-- 공통으로 사용할 수 있는 스타일 초기화 시작 -->
+<style type="text/css">
+	*{margin:0; padding:0;}
+	body {
+		font-family: 'Times New Roman',''serif';
 	}
-	#main_nav {
-		overflow: hidden;
-	}
-	#main_nav > ul.left {
-		overflow: hidden;
-		float : left;
-	}
+	li{list-style:none;}	 /* 별표를없앰 */
+	a{text-decoration:none;} /* 밑줄을 없앰 */
 </style>
+<!-- 공통으로 사용할 수 있는 스타일 초기화 끝 -->
+<!-- main header 영역 스타일 시작 -->
+	<style type="text/css">
+		#main_header {
+			height: 60px;
+			border-bottom: 1px solid black;
+			background-color: #89A236;
+			color: white;
+			padding-left:10px;
+		}
+		#main_gnb {
+			overflow: hidden;
+			background-color: #3E5100;
+			margin-top:-5px;
+		}
+		/* 후손선택자 */
+		#main_gnb a{
+			color: white;
+			font-weight: bold;
+			border-left: 1px solid #89A236;
+			border-right: 1px solid #89A236;
+		}
+		
+		#main_gnb a:hover{
+			color: black;
+			font-weight: bold;
+			border-left: 1px solid #89A236;
+			border-right: 1px solid #89A236;
+		}
+		
+		#main_gnb > ul.left > li{
+			width:110px;
+			float: left;
+			margin:10px;
+		}
+			
+		#main_gnb > ul.right > li{
+			width:110px;
+			float: right;
+			margin:10px;
+		}
+	</style>
 </head>
 <body>
-
 	<center>
 		<table border="0" borderColor="red" width="950px" height="580px">
 			<!--============== head 영역 ==============-->
-			<tr height="50px">
-				<td id="main_header"><h1>Header</h1></td>
+		<tr height="50px" float="left">
+				<td>
+					<header id="main_header">
+						<h1>JAVA59기</h1>
+					</header>
+					</td>
 			</tr>
 			<!--============== navi 영역  ==============-->
-			<tr height="50px">
+			<tr>
 				<td>
-					<nav id="main_nav">
-						<ul class="Left">
-							<li><a href="#">Java</a></li>
-							<li><a href="#">Oracle</a></li>
-							<li><a href="#">HTML5</a></li>
-							<li><a href="#">JSON</a></li>
-							<li><a href="#">CSS</a></li>
-						</ul>
-					</nav>
+	<nav ID="main_gnb">
+		<ul class="left">
+				<li><a href="#">java수업</a></li>
+				<li><a href="#">Oracle수업</a></li>
+				<li><a href="#">HTML수업</a></li>
+		</ul>
+		<ul class="right">
+				<li><a href="#">로그인</a></li>
+				<li><a href="#">회원가입</a></li>
+		</ul>
+	</nav>
 				</td>
 			</tr>
 			<!--============== body 영역  ==============-->
@@ -49,7 +89,7 @@
 					<table border="0" borderColor="green" width="950px" height="450px">
 						<tr>
 							<td width="200px" height="100%" valign="top">
-								<h1>aside</h1>
+								<h1>Aside</h1>
 								 Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -61,7 +101,7 @@
 								pretium tincidunt lacus.
 							</td>
 							<td width="750px" height="100%" valign="top">
-							<h1>section</h1>
+							<h1>Section</h1>
 							    Lorem ipsum dolor sit amet,
 								consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 								labore et dolore magna aliqua. Ut enim ad minim veniam, quis
