--- a/div_html/WebContent/easyui/day2/memberMGR.html
+++ b/div_html/WebContent/easyui/day2/memberMGR.html
@@ -14,7 +14,7 @@
 		function searchList() {
 			alert("조회 클릭 성공");
 			$("#dg_member").datagrid({
-				 url: "../../json/dept.json"
+				 url: "jsonMemberTest.jsp"
 				,onLoadSuccess:function(data){
 				alert("data:"+data);
 				}///////end of onLoadSuccess
@@ -104,8 +104,10 @@
 			,title: "회원관리 - Ver1.0"	
 			,width: 700, height: 500
 			,columns:[[
-		        {field:'dname',title:'부서명',width:100},
-		        {field:'loc',title:'지역',width:100},
+		        {field:'mem_no',title:'번호',width:100},
+		        {field:'mem_id',title:'아이디',width:120},
+		        {field:'mem_name',title:'이름',width:150},
+		        {field:'mem_email',title:'이메일',width:200},
 		    ]]
 		//datagrid에 출력될 값(상수값-고정됨)http://finance.naver.com/item/main.nhn?code=053980
 			,/*data: [
@@ -115,7 +117,7 @@
 			//이벤트 처리에 부에서 undefine 발생한 경우 전체 화면이 깨지진 않음.
 			,*/
 			onDblClickRow: function(index, row){
-				alert("index:"+index+", row:"+row+", row.f1:"+row.f1+", row.f2:"+row.f2);
+				alert("index:"+index+", row:"+row+", row.no:"+row.mem_no+", row.id:"+row.mem_id);
 			}
 			//inert here
 			,onLoadSuccess: function(data){
