--- a/div_html/WebContent/easyui/day2/memberMGR.html
+++ b/div_html/WebContent/easyui/day2/memberMGR.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" type="text/css" href="https://www.jeasyui.com/easyui/themes/icon.css">
     <link rel="stylesheet" type="text/css" href="https://www.jeasyui.com/easyui/themes/color.css">
     <link rel="stylesheet" type="text/css" href="https://www.jeasyui.com/easyui/demo/demo.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="https://www.jeasyui.com/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 
 	<script type="text/javascript">
 		function searchList() {
 			alert("조회 클릭 성공");
 			$("#dg_member").datagrid({
 				 url: "jsonMemberTest.jsp"
-				,onLoadSuccess:function(data){
-				alert("data:"+data);
-				}///////end of onLoadSuccess
+				
+				///////end of onLoadSuccess
 			});
 		}
 	</script>
