--- a/div_html/WebContent/easyui/day5/EmpManagerHtml.html
+++ b/div_html/WebContent/easyui/day5/EmpManagerHtml.html
@@ -9,20 +9,34 @@
     <link rel="stylesheet" type="text/css" href="https://www.jeasyui.com/easyui/demo/demo.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="https://www.jeasyui.com/easyui/jquery.easyui.min.js"></script>
+	<style type="text/css">
+		#d_emp1{
+			background:"#CCAAAA";
+			border:1px dotted black;
+		}
+		#d_emp2{
+			background:"#CCCCCC";
+			border:1px solid black;
+		}
+		
+		
+	</style>
 
-    <script type="text/javascript">
-    	function empList(){
-    		$("#dg").datagrid({
- 			   	url:"http://localhost:8000/easyui/day5/jsonEmpList.jsp"
- 			   ,onLoadSuccess: function(data){
-				   var result = JSON.stringify(data); 			   				
-				   alert("새로고침 처리 성공 :" +data+ " ,"+result);	
- 			   	}
- 			   	});
-    	}
-    </script>
 </head>
 <body>
+   <script type="text/javascript">
+    	function empList(){
+    		$.ajax({
+ 			   	url:"htmlEmpList.jsp"
+ 			   ,success: function(result){
+					$("#d_emp1").text(result);
+					$("#d_emp2").html(result);
+ 			   }
+ 			});//////end of ajax
+    	}/////end of empList();
+    	empList();
+    </script>
+    
  <div id="d_emp1"></div>
  <div id="d_emp2"></div>
 </body>
